syntax = "proto3";

package articleApi;

option go_package = "/proto";

import "google/protobuf/timestamp.proto";

service Article {
    rpc Get(GetArticleRequest) returns (GetArticleResponse);
    rpc GetAll(GetAllArticlesRequest) returns (GetAllArticlesResponse);
    rpc Create(CreateArticleRequest) returns (CreateArticleResponse);
    rpc Update(UpdateArticleRequest) returns (UpdateArticleResponse);
    rpc Delete(DeleteArticleRequest) returns (DeleteArticleResponse);
}
 
message ArticleItem {
    int64 Id = 1;
    string Title = 2;
    string Content = 3;
    google.protobuf.Timestamp DateCreated = 4;
    repeated string Tags = 5;
}

message GetArticleRequest {
    int64 Id = 1;
}
message GetArticleResponse {
    ArticleItem article = 1;
}

message GetAllArticlesRequest {
    int64 page = 1;
}
message GetAllArticlesResponse {
    repeated ArticleItem articles = 1;
}

message DeleteArticleRequest {
    ArticleItem article = 1;
}
message DeleteArticleResponse {
    bool success = 1;
}

message CreateArticleRequest {
    ArticleItem article = 1;
}
message CreateArticleResponse {
    bool success = 1;
    ArticleItem article = 2;
}

message UpdateArticleRequest {
    ArticleItem article = 1;
}
message UpdateArticleResponse {
    bool success = 1;
    ArticleItem article = 2;
}